--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p class="lead">Eu sou Manuela_</p>
+        <h1>Eu estudo Programação</h1>
+        <p>Sou estudante da escola João Pedro Cardoso. Estudo programação no alura, um aplicativo para os estudantes do Ensino Médio,
+            que ensina sobre o pensamento computacional usando HTML, CSS e JaVA Scipt. Veja os oprojetos que o aplicativo Alura disponibiliza.
             que já desenvolvi!</p>
-        <p>Minhas habilidades</p>
+        <p>Habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
